--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "name": "sd",
   "version": "1.0.0",
   "description": "StudyFlow – це веб-застосунок для студентів, який допомагає керувати навчальними завданнями, дедлайнами та прогресом виконання.",
@@ -9,9 +10,9 @@
   ],
   "scripts": {
     "prepare": "husky",
-    "lint": "eslint \"**/*.{ts,tsx,js,jsx}\"",
+    "lint": "eslint \"frontend/src/**/*.{ts,tsx,js,jsx}\" \"backend/src/**/*.{ts,tsx,js,jsx}\"",
     "format": "prettier --check \"**/*.{ts,tsx,js,jsx,json}\"",
-    "format:fix": "prettier write \"**/*.{ts,tsx,js,jsx,json}\"",
+    "format:fix": "prettier --write \"**/*.{ts,tsx,js,jsx,json}\"",
     "test": "echo \"No tests yet\"",
     "build": "npm run build -w frontend && npm run build -w backend"
   },
