lab3: Implements all functions

--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "prettier": "^3.7.2"
+  },
+  "dependencies": {
+    "react-router-dom": "^6.30.2"
   }
 }
