--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "@prisma/client": "^7.2.0",
+    "express": "^5.1.0",
+    "prisma": "^7.2.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
+    "dotenv": "^17.2.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
