--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -11,7 +11,7 @@
     "moduleResolution": "nodenext",
     "target": "es2020",
     "types": [],
-    "iclude": ["src", "src/types"],
+    "include": ["src", "src/types"],
     // For nodejs:
     // "lib": ["esnext"],
     // "types": ["node"],
