--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "cd /d %CD% && tsx watch -r dotenv/config src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "echo \"No tests yet\""
@@ -14,15 +14,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
-    "prisma": "^7.2.0"
+    "pg": "^8.16.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
     "dotenv": "^17.2.3",
+    "husky": "^9.1.7",
+    "prisma": "^7.2.0",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
