lab5: Tests was implemented

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,22 @@
     "test:watch": "vitest",
     "test:unit": "vitest run --dir src",
     "test:integration": "vitest run --dir test/integration",
-    "test:coverage": "vitest run --coverage"
+    "test:e2e": "vitest run --dir test/e2e",
+    "test:coverage": "vitest run --coverage",
+    "test:integration:prepare": "node -e \"console.log('prepare')\"",
+    "test:integration:dbpush": "dotenv -e .env.test -- prisma db push --config=prisma.config.cjs",
+    "test:integration:run": "dotenv -e .env.test -- vitest run --dir test/integration",
+    "test:e2e:prepare": "node -e \"console.log('prepare e2e')\"",
+    "test:e2e:dbpush": "dotenv -e .env.test -- prisma db push --config=prisma.config.cjs",
+    "test:e2e:run": "dotenv -e .env.test -- vitest run --dir test/e2e",
+    "test:all": "npm run test:integration:dbpush && npm run test:integration:run && npm run test:e2e:run"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@libsql/client": "^0.15.0",
+    "@prisma/adapter-libsql": "^7.2.0",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "cors": "^2.8.5",
@@ -32,7 +42,9 @@
     "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^4.0.16",
     "dotenv": "^17.2.3",
+    "dotenv-cli": "^11.0.0",
     "husky": "^9.1.7",
+    "pg-mem": "^3.0.5",
     "prisma": "^7.2.0",
     "supertest": "^7.1.4",
     "ts-node-dev": "^2.0.0",
