--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,9 @@
     "dev": "cd /d %CD% && tsx watch -r dotenv/config src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "lint": "eslint .",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:unit": "vitest run --dir src",
@@ -41,6 +44,7 @@
     "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^4.0.16",
+    "eslint": "^9.39.1",
     "dotenv": "^17.2.3",
     "dotenv-cli": "^11.0.0",
     "husky": "^9.1.7",
