--- a/package.json
+++ b/package.json
@@ -10,20 +10,19 @@
   ],
   "scripts": {
     "prepare": "husky",
-    "lint": "eslint \"frontend/src/**/*.{ts,tsx,js,jsx}\" \"backend/src/**/*.{ts,tsx,js,jsx}\"",
-    "format": "prettier --check \"**/*.{ts,tsx,js,jsx,json}\"",
-    "format:fix": "prettier --write \"**/*.{ts,tsx,js,jsx,json}\"",
-    "test": "echo \"No tests yet\"",
-    "build": "npm run build -w frontend && npm run build -w backend"
+    "lint": "npm -w frontend run lint && npm -w backend run lint",
+    "format": "npm -w frontend run format && npm -w backend run format",
+    "format:fix": "npm -w frontend run format:fix && npm -w backend run format:fix",
+    "test": "npm -w backend run test",
+    "test:integration": "npm -w backend run test:integration",
+    "test:e2e": "npm -w backend run test:e2e:run",
+    "test:all": "npm -w backend run test:all",
+    "build": "npm -w frontend run build && npm -w backend run build"
   },
   "lint-staged": {
-    "*.{ts,tsx,js,jsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{json,md}": [
-      "prettier --write"
-    ]
+    "frontend/src/**/*.{ts,tsx,js,jsx}": "npm -w frontend run lint --",
+    "backend/src/**/*.{ts,tsx,js,jsx}": "npm -w backend run lint --",
+    "*.{json,md}": "prettier --write"
   },
   "repository": {
     "type": "git",
