lab6: fix CI job

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint .",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
+    "prisma:generate": "prisma generate --config=prisma.config.cjs",
     "test": "vitest run --dir src",
     "test:watch": "vitest",
     "test:unit": "vitest run --dir src",
