--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install deps
         run: npm ci
 
+      - name: Prisma generate (backend)
+        run: npm -w backend run prisma:generate
+
       - name: Prettier check
         run: npm run format
 
