lab6: update CI jobs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,3 +36,50 @@ jobs:
 
       - name: Unit tests
         run: npm run test
+
+  ci_db:
+    runs-on: ubuntu-latest
+    needs: ci_fast
+
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: studyflow
+          POSTGRES_PASSWORD: studyflow
+          POSTGRES_DB: studyflow_test
+        ports:
+          - 5433:5432
+        options: >-
+          --health-cmd="pg_isready -U studyflow"
+          --health-interval=5s
+          --health-timeout=5s
+          --health-retries=15
+
+    env:
+      DATABASE_URL: postgresql://studyflow:studyflow@localhost:5433/studyflow_test?schema=public
+      NODE_ENV: test
+      PORT: 3010
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+
+      - name: Install deps
+        run: npm ci
+
+      - name: Prisma generate (backend)
+        run: npm -w backend run prisma:generate
+
+      - name: Prisma db push (test db)
+        run: npm -w backend run prisma:dbpush:test
+
+      - name: Integration tests
+        run: npm -w backend run test:integration:run:ci
+
+      - name: E2E tests
+        run: npm -w backend run test:e2e:run:ci
