--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,9 @@
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
     "prisma:generate": "prisma generate --config=prisma.config.cjs",
+    "prisma:dbpush:test": "prisma db push --config=prisma.config.cjs",
+    "test:integration:run:ci": "vitest run --dir test/integration",
+    "test:e2e:run:ci": "vitest run --dir test/e2e",
     "test": "vitest run --dir src",
     "test:watch": "vitest",
     "test:unit": "vitest run --dir src",
