--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   },
   "homepage": "https://github.com/nislep0/StudyFlow#readme",
   "devDependencies": {
+    "@commitlint/cli": "^20.3.1",
+    "@commitlint/config-conventional": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^8.48.0",
     "@typescript-eslint/parser": "^8.48.0",
     "eslint": "^8.57.1",
