--- a/backend/package.json
+++ b/backend/package.json
@@ -39,18 +39,19 @@
     "@prisma/client": "^7.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.5",
-    "@types/node": "^24.10.1",
+    "@types/express": "^5.0.6",
+    "@types/node": "^24.10.8",
     "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^4.0.16",
-    "eslint": "^9.39.1",
     "dotenv": "^17.2.3",
     "dotenv-cli": "^11.0.0",
+    "eslint": "^9.39.1",
     "husky": "^9.1.7",
     "pg-mem": "^3.0.5",
     "prisma": "^7.2.0",
