--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -44,5 +44,6 @@
     "moduleDetection": "force",
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["test", "**/*.test.ts", "**/*.spec.ts"]
 }
