lab6: update config

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,9 @@
     "prisma:dbpush:test": "prisma db push --config=prisma.config.cjs",
     "test:integration:run:ci": "vitest run --dir test/integration",
     "test:e2e:run:ci": "vitest run --dir test/e2e",
-    "test": "vitest run --dir src",
+    "test": "vitest run --dir test/unit",
     "test:watch": "vitest",
-    "test:unit": "vitest run --dir src",
+    "test:unit": "vitest run --dir test/unit",
     "test:integration": "vitest run --dir test/integration",
     "test:e2e": "vitest run --dir test/e2e",
     "test:coverage": "vitest run --coverage",
